[gd_scene load_steps=6 format=3 uid="uid://dafldkf3oaqk6"]

[ext_resource type="Script" uid="uid://cfsbtmqhukk3n" path="res://Scripts/System Stuff/GameManager.gd" id="1_mjwia"]
[ext_resource type="PackedScene" uid="uid://4igv4estbpjp" path="res://Projects/Default Project Template/Scenes/Debug Scene.tscn" id="2_ds6l5"]
[ext_resource type="PackedScene" uid="uid://b1f23cmle05ms" path="res://Projects/Default Project Template/Scenes/PlayerScenes/Default Player.tscn" id="2_raw3u"]
[ext_resource type="Script" uid="uid://7rwd4d1pj7jg" path="res://Scripts/System Stuff/AbsPlayerController.gd" id="3_edv4n"]
[ext_resource type="Script" uid="uid://bmt8ajb028p7w" path="res://Scripts/Menus/SaveMenu.gd" id="4_p2lv0"]

[node name="Node3D" type="Node3D"]

[node name="SystemStuff" type="Node" parent="."]

[node name="GameManager" type="Node" parent="SystemStuff" node_paths=PackedStringArray("networkNode")]
script = ExtResource("1_mjwia")
player_scene = ExtResource("2_raw3u")
networkNode = NodePath("../../SceneStuff/Players")

[node name="SceneStuff" type="Node" parent="."]

[node name="PlayerControls" type="Node" parent="SceneStuff"]
script = ExtResource("3_edv4n")
runSpeed = 2.0

[node name="SaveDataUI" type="Control" parent="SceneStuff/PlayerControls" node_paths=PackedStringArray("saveLoadMenu", "fileList")]
unique_name_in_owner = true
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_p2lv0")
saveLoadMenu = NodePath("Save Load Menu")
fileList = NodePath("Save Load Menu/File List")

[node name="Save Button" type="Button" parent="SceneStuff/PlayerControls/SaveDataUI"]
layout_mode = 2
offset_left = 87.0
offset_top = 75.0
offset_right = 233.0
offset_bottom = 180.0
text = "Save"

[node name="Load Button" type="Button" parent="SceneStuff/PlayerControls/SaveDataUI"]
layout_mode = 2
offset_left = 88.0
offset_top = 201.0
offset_right = 234.0
offset_bottom = 306.0
text = "Load
"

[node name="Close" type="Button" parent="SceneStuff/PlayerControls/SaveDataUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.101
offset_left = 1008.0
offset_top = 558.0
offset_right = -57.0
offset_bottom = -42.3881
text = "Close"

[node name="Save Load Menu" type="Control" parent="SceneStuff/PlayerControls/SaveDataUI"]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 15.62

[node name="Background" type="Panel" parent="SceneStuff/PlayerControls/SaveDataUI/Save Load Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="SceneStuff/PlayerControls/SaveDataUI/Save Load Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 510.0
offset_right = -510.0
offset_bottom = -621.0
grow_horizontal = 2
text = "Save/Load Game"

[node name="File List" type="ItemList" parent="SceneStuff/PlayerControls/SaveDataUI/Save Load Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 52.0
offset_right = 2.0
offset_bottom = 52.0
item_count = 1

[node name="Close Button" type="Button" parent="SceneStuff/PlayerControls/SaveDataUI/Save Load Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1086.0
offset_top = 8.0
offset_right = -19.0
offset_bottom = -549.0
text = "Close"

[node name="Players" type="Node" parent="SceneStuff"]

[node name="LoadedScenes" type="Node" parent="SceneStuff"]

[node name="DebugScene" parent="SceneStuff/LoadedScenes" instance=ExtResource("2_ds6l5")]

[connection signal="pressed" from="SceneStuff/PlayerControls/SaveDataUI/Save Button" to="SceneStuff/PlayerControls/SaveDataUI" method="openSaveMenu"]
[connection signal="pressed" from="SceneStuff/PlayerControls/SaveDataUI/Load Button" to="SceneStuff/PlayerControls/SaveDataUI" method="openLoadMenu"]
[connection signal="pressed" from="SceneStuff/PlayerControls/SaveDataUI/Close" to="SceneStuff/PlayerControls/SaveDataUI" method="closeWholeMenu"]
[connection signal="item_clicked" from="SceneStuff/PlayerControls/SaveDataUI/Save Load Menu/File List" to="SceneStuff/PlayerControls/SaveDataUI" method="_on_file_list_item_clicked"]
[connection signal="pressed" from="SceneStuff/PlayerControls/SaveDataUI/Save Load Menu/Close Button" to="SceneStuff/PlayerControls/SaveDataUI" method="closeSaveLoadMenu"]
